fixed the 28th joke i hope with overflow

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
   outline-offset: 7px;
   font-family: 'courier';
   font-weight: 800;
+  overflow-wrap: break-word;
 }
 
 .githubDiv {
